# taxi

./: .bzrignore  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ConnInfo.vala  ConnectionSaver.vala  GUI.vala  INSTALL  LocalFileAccess.vala  README.md  RemoteFileAccess.vala  Shift.vala  Taxi.vala  app  com.github.alecaddd.taxi.yml  compile.sh  meson.build  org.khampal.taxi.gschema.xml  quick-compile.sh
.github/workflows/: ci.yml
API/: .IConnInfo.vala.swp  IConnInfo.vala  IConnectionSaver.vala  IFileAccess.vala  IFileOperations.vala  IStringFormatter.vala
Widgets/: ConnectBox.vala  ConnectDialog.vala  FilePane.vala  PathBar.vala
data/: Application.css  CMakeLists.txt  application-dark.css  application.css  com.github.Alecaddd.taxi.desktop.in  com.github.Alecaddd.taxi.gschema.xml  com.github.alecaddd.taxi.appdata.xml.in  com.github.alecaddd.taxi.desktop.in  com.github.alecaddd.taxi.gschema.xml  css.gresource.xml  meson.build  taxi.desktop  taxi.gschema.xml  taxi.metainfo.xml.in
data/css/: application-dark.css  application.css
data/schemas/: CMakeLists.txt
debian/: changelog  control  copyright
po/: CMakeLists.txt  LINGUAS  POTFILES  af.po  ast.po  be.po  bg.po  bn.po  ca.po  ckb.po  com.github.Alecaddd.taxi.pot  com.github.alecaddd.taxi.pot  cs.po  da.po  de.po  en_CA.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  hy.po  id.po  it.po  ko.po  ky.po  lt.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  si.po  sl.po  sma.po  sq.po  sr.po  (+9 more)
src/: Application.vala  ConflictFlag.vala  ConnInfo.vala  ConnectionSaver.vala  FileAccess.vala  FileOperations.vala  GUI.vala  LocalFileAccess.vala  Location.vala  OperationInfo.vala  RemoteFileAccess.vala  SavedState.vala  Taxi.vala  TimedStuff.vala.old  config.vala  config.vala.cmake  meson.build
src/API/: GraniteSettings.vala  IConnInfo.vala  IConnectionSaver.vala  IFileAccess.vala  IFileOperations.vala  IOperationInfo.vala
src/Backend/: ConnectionSaver.vala  FileAccess.vala  FileOperations.vala  LocalFileAccess.vala  RemoteFileAccess.vala
src/Enum/: Protocol.vala
src/Frontend/: GUI.vala  MainWindow.vala  Window.vala
src/Frontend/Widgets/: ConnectBox.vala  FilePane.vala  FileRow.vala  HeaderBar.vala  OperationsPopover.vala  PathBar.vala  PathBarSeparator.vala
src/Settings/: SavedState.vala
src/Widgets/: ConnectBox.vala  FilePane.vala  OperationsPopover.vala  PathBar.vala
src/css/: application.css  fallback.css
